# polyglot-sql-r

./: .Rbuildignore  .gitignore  404.html  CONTRIBUTING.html  CONTRIBUTING.md  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  site.webmanifest  sitemap.xml
R/: analysis.R  extendr-wrappers.R  ffi.R  metadata.R  parse.R  polyglotSQL-package.R  print.R  schema.R  transpile.R
articles/: dialect-migration.html  dialect-migration.md  getting-started.html  getting-started.md  index.html  index.md  installation-and-troubleshooting.html  installation-and-troubleshooting.md  parsing-validation-lineage.html  parsing-validation-lineage.md
inst/: AUTHORS  COPYRIGHTS
man/: as_polyglot_schema.Rd  polyglotSQL-package.Rd  polyglot_version.Rd  sql_analyze.Rd  sql_annotate_types.Rd  sql_dialects.Rd  sql_diff.Rd  sql_format.Rd  sql_generate.Rd  sql_lineage.Rd  sql_openlineage.Rd  sql_optimize.Rd  sql_parse.Rd  sql_source_tables.Rd  sql_tokenize.Rd  sql_transpile.Rd  sql_validate.Rd
news/: index.html  index.md
reference/: as_polyglot_schema.html  as_polyglot_schema.md  index.html  index.md  polyglotSQL-package.html  polyglotSQL-package.md  polyglotSQL.html  polyglot_version.html  polyglot_version.md  sql_analyze.html  sql_analyze.md  sql_annotate_types.html  sql_annotate_types.md  sql_dialects.html  sql_dialects.md  sql_diff.html  (+21 more)
src/rust/: Cargo.toml  build.rs  document.rs
src/rust/src/: lib.rs
(+25 files in other folders)
